--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@ function topFunction() {
 
 					<tr>
 						<td width="40%">
-							<img src="images/WhatsApp Image 2023-06-25 at 22.11.57.jpeg" height="400px">
+							<img src="C:\web_devlopment\images\WhatsApp Image 2023-06-25 at 22.11.57.jpeg" height="400px">
 						</td>
 
 						<td width="60%">
