--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,8 @@
 }
 
 	</style>
-
+	
+	<button id="myBtn" class="myBtn" onclick="topFunction()">Top</button>
 	<script>
 		let mybutton = document.getElementById("myBtn");
 
